Dados da matriz colocados

--- a/sobre.html
+++ b/sobre.html
@@ -110,43 +110,63 @@
             <h1>IMPORTÂNCIA DA RESPONSABILIDADE SOCIOAMBIENTAL<i class="bi bi-tree-fill"></i></h1>
             <p>
                 <ol type = "I">
-                    <li><span>Redução do Impacto Ambiental</span> Mesmo sem a produção de livros físicos, a empresa pode adotar práticas que minimizem seu impacto ambiental. Isso inclui usar servidores e centros de dados que sejam eficientes em termos de energia, promover o uso de energia renovável e compensar as emissões de carbono das operações digitais e logísticas.</li>
+                    <li><span>Redução do Impacto Ambiental: </span> Mesmo sem a produção de livros físicos, a empresa pode adotar práticas que minimizem seu impacto ambiental. Isso inclui usar servidores e centros de dados que sejam eficientes em termos de energia, promover o uso de energia renovável e compensar as emissões de carbono das operações digitais e logísticas.</li>
 
-                    <li><span>Transporte Sustentável</span>Para os livros físicos vendidos, a empresa pode escolher métodos de transporte e entrega que reduzam a pegada de carbono. Isso pode envolver parcerias com serviços de entrega mais ecológicos ou otimização de rotas para minimizar o consumo de combustível.</li>
+                    <li><span>Transporte Sustentável: </span>Para os livros físicos vendidos, a empresa pode escolher métodos de transporte e entrega que reduzam a pegada de carbono. Isso pode envolver parcerias com serviços de entrega mais ecológicos ou otimização de rotas para minimizar o consumo de combustível.</li>
 
-                    <li><span>Embalagens Ecológicas</span>Utilizar embalagens recicláveis e minimizadas para as entregas ajuda a reduzir o desperdício e o impacto ambiental. A empresa pode também incentivar os fornecedores a adotarem práticas sustentáveis.</li>
+                    <li><span>Embalagens Ecológicas: </span>Utilizar embalagens recicláveis e minimizadas para as entregas ajuda a reduzir o desperdício e o impacto ambiental. A empresa pode também incentivar os fornecedores a adotarem práticas sustentáveis.</li>
 
-                    <li><span>Reflorestamento e Conservação</span> A empresa pode investir em programas de reflorestamento ou conservação florestal, ajudando a compensar os impactos ambientais indiretos da indústria do livro e contribuindo para a preservação do meio ambiente.</li>
+                    <li><span>Reflorestamento e Conservação: </span> A empresa pode investir em programas de reflorestamento ou conservação florestal, ajudando a compensar os impactos ambientais indiretos da indústria do livro e contribuindo para a preservação do meio ambiente.</li>
 
-                    <li><span>Educação e Conscientização</span>Como uma empresa de livros, há uma oportunidade única de promover a conscientização ambiental e social através do conteúdo que oferece. Isso pode incluir a curadoria de livros sobre sustentabilidade, mudanças climáticas e responsabilidade social, além de parcerias com autores e organizações ambientais.</li>
+                    <li><span>Educação e Conscientização: </span>Como uma empresa de livros, há uma oportunidade única de promover a conscientização ambiental e social através do conteúdo que oferece. Isso pode incluir a curadoria de livros sobre sustentabilidade, mudanças climáticas e responsabilidade social, além de parcerias com autores e organizações ambientais.</li>
 
-                    <li><span>Responsabilidade Social</span>Além das questões ambientais, a empresa pode se envolver em práticas que beneficiem a sociedade, como apoiar a educação, investir em programas comunitários e garantir condições de trabalho justas e inclusivas para todos os funcionários.</li>
+                    <li><span>Responsabilidade Social: </span>Além das questões ambientais, a empresa pode se envolver em práticas que beneficiem a sociedade, como apoiar a educação, investir em programas comunitários e garantir condições de trabalho justas e inclusivas para todos os funcionários.</li>
 
-                    <li><span>Economia Circular e Reciclagem</span> Promover a economia circular incentivando os clientes a reciclar ou doar livros após a leitura pode ajudar a reduzir o desperdício e promover a reutilização de recursos.</li>
+                    <li><span>Economia Circular e Reciclagem: </span> Promover a economia circular incentivando os clientes a reciclar ou doar livros após a leitura pode ajudar a reduzir o desperdício e promover a reutilização de recursos.</li>
 
-                    <li><span>Produtos Digitais Sustentáveis</span> Focar em produtos digitais, como e-books e audiolivros, reduz a necessidade de materiais físicos, contribuindo para a preservação ambiental. No entanto, é importante também considerar a sustentabilidade na infraestrutura digital utilizada.</li>
+                    <li><span>Produtos Digitais Sustentáveis: </span> Focar em produtos digitais, como e-books e audiolivros, reduz a necessidade de materiais físicos, contribuindo para a preservação ambiental. No entanto, é importante também considerar a sustentabilidade na infraestrutura digital utilizada.</li>
                 </ol>
             </p>
             <h1>IMPORTÂNCIA DE SEGUIR AS LEIS DO TRABALHO<i class="bi bi-journals"></i></h1>
-            <p>[
+            <p>
                 <ol type = "I">
-                    <li><span>Cumprimento Legal</span>Obedecer às leis trabalhistas é uma obrigação. Não fazê-lo pode resultar em multas, processos judiciais e até a interrupção das atividades da empresa.</li>
+                    <li><span>Cumprimento Legal: </span>Obedecer às leis trabalhistas é uma obrigação. Não fazê-lo pode resultar em multas, processos judiciais e até a interrupção das atividades da empresa.</li>
 
-                    <li><span>Proteção dos Direitos dos Trabalhadores</span>As leis trabalhistas garantem que os trabalhadores recebam salários justos, tenham jornadas de trabalho adequadas e condições seguras. Isso assegura que eles sejam tratados com justiça e dignidade.</li>
+                    <li><span>Proteção dos Direitos dos Trabalhadores: </span>As leis trabalhistas garantem que os trabalhadores recebam salários justos, tenham jornadas de trabalho adequadas e condições seguras. Isso assegura que eles sejam tratados com justiça e dignidade.</li>
 
-                    <li><span>Reputação da Empresa</span> Empresas que respeitam os direitos trabalhistas ganham uma melhor reputação no mercado. Isso pode atrair mais clientes, parceiros de negócios e talentos, além de fortalecer a imagem da marca.</li>
+                    <li><span>Reputação da Empresa: </span> Empresas que respeitam os direitos trabalhistas ganham uma melhor reputação no mercado. Isso pode atrair mais clientes, parceiros de negócios e talentos, além de fortalecer a imagem da marca.</li>
 
-                    <li><span>Motivação e Produtividade</span>Funcionários que têm seus direitos respeitados são mais motivados e produtivos. Isso melhora a qualidade do serviço e pode aumentar as vendas e a satisfação do cliente.</li>
+                    <li><span>Motivação e Produtividade: </span>Funcionários que têm seus direitos respeitados são mais motivados e produtivos. Isso melhora a qualidade do serviço e pode aumentar as vendas e a satisfação do cliente.</li>
 
-                    <li><span>Redução de Turnover</span>O respeito às leis trabalhistas ajuda a reter talentos, reduzindo a rotatividade de funcionários. Contratar e treinar novos empregados é caro e consome tempo, por isso manter uma equipe estável é vantajoso.</li>
+                    <li><span>Redução de Turnover: </span>O respeito às leis trabalhistas ajuda a reter talentos, reduzindo a rotatividade de funcionários. Contratar e treinar novos empregados é caro e consome tempo, por isso manter uma equipe estável é vantajoso.</li>
 
-                    <li><span>Evitar Conflitos e Litígios</span>Cumprir as leis trabalhistas minimiza o risco de conflitos e processos judiciais. Isso protege a empresa de custos legais e das distrações que esses problemas podem causar.</li>
+                    <li><span>Evitar Conflitos e Litígios: </span>Cumprir as leis trabalhistas minimiza o risco de conflitos e processos judiciais. Isso protege a empresa de custos legais e das distrações que esses problemas podem causar.</li>
 
-                    <li><span>Evitar Conflitos e Litígios</span> Seguir as leis trabalhistas mostra que a empresa se preocupa com a comunidade e assume uma postura de responsabilidade social. Isso melhora a percepção pública e fortalece sua posição no mercado.</li>
+                    <li><span>Evitar Conflitos e Litígios: </span> Seguir as leis trabalhistas mostra que a empresa se preocupa com a comunidade e assume uma postura de responsabilidade social. Isso melhora a percepção pública e fortalece sua posição no mercado.</li>
                     
                 </ol>
             </p>
             <h1>NOSSA MATRIZ SWOT<i class="bi bi-grid"></i></h1>
+            <div class="matriz-swot">
+                <h1 id="titulo">SWOT</h1>
+                <div class="elementos">
+                    <h2 class = "mat">Forças</h2>
+                    <p class="ponto"> - Variedade de títulos</p>
+                    <p class="ponto"> - Experiência de compra conveniente</p>
+                    <p class="ponto"> - Compromisso com a responsabilidade social</p>
+                    <p class="ponto"> - Excelência no atendimento ao cliente</p>
+                    <h2 class = "mat">Fraquezas</h2>
+                    <p class="ponto"> - Concorrência acirrada</p>
+                    <p class="ponto"> -  Dependência de parceiros de logística</p>
+                    <h2 class="mat">Oportunidades</h2>
+                    <p class="ponto"> - Crescente demanda por livros online</p>
+                    <p class="ponto"> - Expansão do mercado de e-books</p>
+                    <p class="ponto"> - Parcerias estratégicas</p>
+                    <h2 class="mat">Ameaças</h2>
+                    <p class="ponto"> - Mudanças nas preferências dos consumidores</p>
+                    <p class="ponto"> - Riscos de segurança cibernética</p>
+                </div>
+            </div>
             <h1>NOSSO ORGANOGRAMA<i class="bi bi-diagram-3-fill"></i></h1>
             <h1>ESTRATÉGIA DE MARKETING<i class="bi bi-ethernet"></i></h1>
             <ul type = "dise">
