--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div id = "principal">    
         <header id = "cabecalho">
-            <img src = "_imagens/logo1.jpg" alt = "logo"/>
-            <h1 id = "titulo">BooksLux</h1>
+            <img src = "_imagens/logo1.png"/>
+            <h1 id = "titulo">BookLux</h1>
             <nav id = "navega">
                 <ul>
                     <li><a href="index.html"><i class="bi bi-book-fill"></i>Livros</a></li>
@@ -260,6 +260,5 @@
             <h1>Created By <a href="https://www.instagram.com/ph_dev_/" target="_blank">PHDEV&copy;</a> 2024&trade;</h1>
         </footer>
     </div>
-    <script src="_scripts/carrinho.js"></script>
 </body>
 </html>
