--- a/sobre.html
+++ b/sobre.html
@@ -12,8 +12,8 @@
 <body>
     <div id = "principal">    
         <header id = "cabecalho">
-            <img src = "_imagens/logo1.jpg"/>
-            <h1 id = "titulo">BooksLux</h1>
+            <img src = "_imagens/logo1.png"/>
+            <h1 id = "titulo">BookLux</h1>
             <nav id = "navega">
                 <ul>
                     <li><a href="index.html"><i class="bi bi-book-fill"></i>Livros</a></li>
@@ -73,6 +73,7 @@
                     impacto positivo que ela pode ter na sociedade. Por isso, destinamos parte dos nossos
                     recursos para apoiar projetos sociais relacionados à leitura, colaborando com iniciativas que promovem a inclusão literária em comunidades carentes, escolas e bibliotecas.</li>
                 </ol>
+                <img src="_imagens/gdf.png" id = "gdf">
             </p>
             <h1>MISSÃO<i class="bi bi-bar-chart-line-fill"></i></h1>
             <p>A missão da BookLux é democratizar o acesso à leitura no Brasil, proporcionando uma
@@ -168,6 +169,8 @@
                 </div>
             </div>
             <h1>NOSSO ORGANOGRAMA<i class="bi bi-diagram-3-fill"></i></h1>
+            <object  class = "pdf" data="_documentos/organograma.pdf" type="application/pdf" width="700px" height="550px">
+            </object>
             <h1>ESTRATÉGIA DE MARKETING<i class="bi bi-ethernet"></i></h1>
             <ul type = "dise">
                 <li><span>Estratégia de Produto</span><br/>Catálogo de Livros: Ampliar a variedade de livros, incluindo best-sellers, lançamentos, e obras acadêmicas.<br/>Parceria com o Governo: Aproveitar programas educacionais e de incentivo à leitura para promover livros didáticos e literários.</li>
