--- a/carrinho.html
+++ b/carrinho.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <header id = "cabecalho">
-        <img src = "_imagens/logo1.jpg" alt = "logo"/>
-        <h1 id = "titulo">BooksLux</h1>
+        <img src = "_imagens/logo1.png"/>
+        <h1 id = "titulo">BookLux</h1>
         <nav id = "navega">
             <ul>
                 <li><a href="index.html"><i class="bi bi-book-fill"></i>Livros</a></li>
@@ -32,6 +32,5 @@
     <footer id = "rodape">
         <h1>Created By <a href="https://www.instagram.com/ph_dev_/" target="_blank">PHDEV&copy;</a> 2024&trade;</h1>
     </footer>
-    <script src="_scripts/carrinho.js"></script>
 </body>
 </html>
