--- a/login.html
+++ b/login.html
@@ -13,8 +13,8 @@
 <body>
     <header>
         <header>
-            <img src = "_imagens/logo1.jpg"/>
-            <h1 id = "titulo">BooksLux</h1>
+            <img src = "_imagens/logo1.png"/>
+            <h1 id = "titulo">BookLux</h1>
             <nav id = "navega">
                 <ul>
                     <li><a href="index.html"><i class="bi bi-book-fill"></i>Livros</a></li>
