--- a/carrinho.html
+++ b/carrinho.html
@@ -24,10 +24,13 @@
         </nav>
     </header>
     <div class="area-carrinho">
-        <h1>Página de compras em desenvolvimento!</h1>
-        <h2>Estamos trabalhando nisso...</h2>
-        <i class="fa-solid fa-gear" id = "engrenagem1"></i>
-        <i class="fa-solid fa-gear" id = "engrenagem2"></i>
+        <h1>Carrinho</h1>
+        <div class="area-livros"></div>
+        <div class="area-compra">
+            <h1 class="qntd">Quantidade: <p id="qntd"></p> </h1>
+            <h1 class="total">Total: R$ <p id="preco"></p> </h1>
+           <button id = "comprar">Comprar</button>
+        </div>
     </div>
     <footer id = "rodape">
         <h1>Created By <a href="https://www.instagram.com/ph_dev_/" target="_blank">PHDEV&copy;</a> 2024&trade;</h1>
