--- a/carrinho.html
+++ b/carrinho.html
@@ -24,14 +24,9 @@
         </nav>
     </header>
     <div class="area-carrinho">
-        <h1>Carrinho</h1>
-        <div class="area-livros"></div>
-        <div class="area-compra">
-            <h1 class="qntd">Quantidade: <p id="qntd"></p> </h1>
-            <h1 class="total">Total: R$ <p id="preco"></p> </h1>
-           <button id = "comprar">Comprar</button>
-        </div>
+        <h1>Seu Carrinho<i id = "carrinho" class="bi bi-cart-check-fill"></i></a></h1>
     </div>
+    <button type = "submit" id = "compra">Comprar</button>
     <footer id = "rodape">
         <h1>Created By <a href="https://www.instagram.com/ph_dev_/" target="_blank">PHDEV&copy;</a> 2024&trade;</h1>
     </footer>
